filter and export updates

--- a/CarRentalManagementSystem/appsettings.json
+++ b/CarRentalManagementSystem/appsettings.json
@@ -6,7 +6,7 @@
     "From": "infocynexblazer@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
-    "Username": "infocynexblazer@gmail.com",
+    "Username": "lakshiga20021216@gmail.com",
     "Password": "qnbw alos acww iwis"
   },
   "StripeSettings": {
