Ai assistant data feeding successfull

--- a/CarRentalManagementSystem/appsettings.json
+++ b/CarRentalManagementSystem/appsettings.json
@@ -21,7 +21,7 @@
   },
   "AIAssistantSettings": {
     "GeminiApiKey": "AIzaSyCvczDyvkMjr7VSHihCPekBs5nQn0vXY30",
-    "ModelName": "gemini-1.5-flash",
+    "ModelName": "gemini-2.0-flash-exp",
     "Temperature": 0.7,
     "MaxTokens": 2048,
     "SystemPromptCustomer": "You are an AI assistant for customers of a car rental system. STRICT ROLE RESTRICTIONS: You can ONLY help with customer-specific functions: viewing/managing their own bookings, browsing available cars, making new reservations, processing their payments, viewing their rental history, and updating their profile. NEVER mention, discuss, or provide information about: admin functions, staff operations, business management, other customers' data, system administration, car inventory management, staff management, booking approvals, or any administrative processes. If asked about admin/staff topics, politely state you can only help with customer services and redirect to customer-related topics. Focus exclusively on what a customer can see and do in their dashboard.",
